@@ -6,8 +6,8 @@
 // Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 // Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 // Data de criação: 10/10/2021
-// Data de atualização: 14/10/2021
-// Versão: 0.03
+// Data de atualização: 17/10/2021
+// Versão: 0.04
 // Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 // Configuração das opções do Bind9 DNS Server
@@ -36,7 +36,6 @@ options {
 	//listen-on-v6 { 
 	//	any; 
 	//};
-	filter-aaaa-on-v4 yes;
 
 	// Configurações Globais do Bind9 DNS Server (deixar o padrão)
 	auth-nxdomain no;
