@@ -3,29 +3,28 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 31/05/2016
-# Data de atualização: 06/02/2019
-# Versão: 0.5
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel >= 4.15.x
-
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 17/10/2021
+# Data de atualização: 17/10/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+#
 # Configuração de acesso a informações de usuários, grupos e senhas.
-# Habilitar os recursos de files (arquivos) e winbind (integração) SAMBA+GNU/Linux
-passwd:         files compat systemd winbind
-group:          files compat systemd winbind
-shadow:         files compat systemd winbind
+passwd:         files systemd
+group:          files systemd
+shadow:         files
 gshadow:        files
 
-# Configuração de resolução de nomes
-# Habilitar o recursos de dns depois de files (arquivo hosts)
-hosts:          files dns mdns4_minimal [NOTFOUND=return]
+# Configuração da forma de resolução de nomes de computadores
+hosts:          files dns
 networks:       files
 
-# Deixar as configurações padrão.
+# Configuração da consultado dos serviços de rede
 protocols:      db files
 services:       db files
 ethers:         db files
 rpc:            db files
 
-# Deixar as configurações padrão.
+# Configuração da consulta de resolução do serviço de Grupos de Rede
 netgroup:       nis
