@@ -1,0 +1,17 @@
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 17/10/2021
+# Data de atualização: 17/10/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+#
+# Configuração global dos Servidores NTP que serão utilizados para sincronizar
+# a data e hora do servidor local Ubuntu Server
+[Time]
+NTP=ptispo01ws01.pti.intra
+FallbackNTP=a.st1.ntp.br
